# ironbar-ch-calendar

./: .gitignore  AGENTS.md  README.md  install.sh  main.py  pyproject.toml
ironbar/: config.example.toml  launch-calendar.sh
ironbar_ch_calendar/: __init__.py  app.py  calendar_service.py  layer_shell.py
